--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         }
     ],
     "require": {
-        "spatie/laravel-permission": "~3.0"
+        "spatie/laravel-permission": "~3.0",
+        "maatwebsite/excel": "^3.1"
     },
     "autoload": {
         "psr-4": {
