v2版本开发后台对接CAS基本完成

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     ],
     "require": {
         "spatie/laravel-permission": "~3.0",
-        "maatwebsite/excel": "^3.1"
+        "maatwebsite/excel": "^3.1",
+        "hsk9044/lwhy-cas-client": "^0.1"
     },
     "autoload": {
         "psr-4": {
