--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,7 @@
     ],
     "require": {
         "spatie/laravel-permission": "~3.0",
-        "maatwebsite/excel": "^3.1",
-        "hsk9044/lwhy-cas-client": "^0.3"
+        "maatwebsite/excel": "^3.1"
     },
     "autoload": {
         "psr-4": {
